2016-07-23  Markus Gans  <guru.mail@muenster.de>
	* Add missing null pointer check in FOptiAttr before dereferencing
	* Remove callbacks and accelerator keys from FDialogListMenu
	  on closing of a dialog window
	* Execute accelerator keys only once
	* Improved window focus behavior

2016-07-23  Markus Gans  <guru.mail@muenster.de>
	* Add a modifier key correction for the linux tty
	* Support to read meta+enter from keyboard

2016-07-16  Markus Gans  <guru.mail@muenster.de>
	* Support to read meta+tab from keyboard

2016-07-16  Markus Gans  <guru.mail@muenster.de>
	* Switch to a specific dialog with meta key + 1..9
	* Add more meta key escape sequences (for putty)

2016-07-14  Markus Gans  <guru.mail@muenster.de>
	* Adding a dialog list with the entries in the chronological 
	  order of the generation

2016-07-13  Markus Gans  <guru.mail@muenster.de>
	* Bind accelerator key from the FMenuItem to the root widget

2016-07-12  Markus Gans  <guru.mail@muenster.de>
	* The status bar and the menu bar insert now the accelerator keys 
	  into the global scope of the root widget

2016-07-10  Markus Gans  <guru.mail@muenster.de>
	* Remove obsolete code from FDialog destructor
	* FDialog focus fix

2016-07-08  Markus Gans  <guru.mail@muenster.de>
	* Better code readability: control structures (if/else, while, switch) 
	  are now separated by a blank line.

2016-07-06  Markus Gans  <guru.mail@muenster.de>
	* Stop terminal updates during processCloseWidget() is working

2016-07-03  Markus Gans  <guru.mail@muenster.de>
	* Add the new class FDialogListMenu to switch between dialog menus
	* More consistent method names: 
	  rename parentWidget() to getParentWidget()

2016-06-27  Markus Gans  <guru.mail@muenster.de>
	* Fix the use-after-free bug for previous_widget

2016-06-26  Markus Gans  <guru.mail@muenster.de>
	* Bug fix for FWindow::activatePrevWindow()

2016-06-25  Markus Gans  <guru.mail@muenster.de>
	* Move processNextEvent() code into sub functions
